--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-  <img src="istiyaq.jpeg">
+  <img src="https://github.com/istiyaq0/profile/blob/main/istiyaq.jpeg">
   <h1>mohammed ishtiyaq</h1>
   <p class="description">computer enthusiast </p>
   <ul>
