--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
 <body>
   <img src="https://github.com/istiyaq0/profile/blob/main/istiyaq.jpeg">
-  <h1>mohammed ishtiyaq</h1>
-  <p class="description">computer enthusiast </p>
+  <h1>Mohammed Ishtiyaq</h1>
+  <p class="description">Bachelor's in computer science </p>
   <ul>
     <li>
       <a href="mailto:mohammedistiyaq007@gmail.com">Email</a>
@@ -90,10 +90,6 @@
     <li>
       <a href="https://github.com/istiyaq0" target="_blank">GitHub</a>
     </li>
-    
-   
-
- 
     <li>
       <a href="https://twitter.com/mohdistiyaq007" target="_blank">Twitter</a>
     </li>
