--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-  <img src="https://github.com/istiyaq0/profile/blob/main/istiyaq.jpeg">
+  <img src="istiyaq.jpeg">
   <h1>Mohammed Ishtiyaq</h1>
   <p class="description">Bachelor's in computer science </p>
   <ul>
